chassis/tests/failing/comp_no_type_item.stderr
error: custom attribute panicked
 --> $DIR/comp_no_type_item.rs:5:1
  |
5 | #[integration]
  | ^^^^^^^^^^^^^^
  |
  = help: message: explicit panic
